module-4/manifests/api-versioning.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v1
  namespace: apps
  annotations:                                      
    hub.traefik.io/api: customer-api-versioned      # API Name  
    hub.traefik.io/api-version: customer-api-v1     # APIVersion Object Name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`) && Header(`version`, `v1`)
      services:
        - name: customer-app
          port: 3000
  tls:
    certResolver: le

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v2
  namespace: apps
  annotations:                                      # Add API annotation to enable APIM
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v2
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`) && Header(`version`, `v2`)
      services:
        - name: customer-app-v2
          port: 3000
  tls:
    certResolver: le

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v3
  namespace: apps
  annotations:                                      # Add API annotation to enable APIM
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v3
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`) && Header(`version`, `v3`)
      services:
        - name: customer-app-v3
          port: 3000
  tls:
    certResolver: le

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers-v4
  namespace: apps
  annotations:                                      # Add API annotation to enable APIM
    hub.traefik.io/api: customer-api-versioned
    hub.traefik.io/api-version: customer-api-v4
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`) && Header(`version`, `v4`)
      services:
        - name: customer-app-v4
          port: 3000
  tls:
    certResolver: le
